dinoco_docs/src/content/v0.0.1/ko-kr/orm/find-many.mdx
export const title = "find_many";

# find_many

레코드 목록을 가져오는 데 사용됩니다.

---

## 수행할 수 있는 작업

- 다음으로 프로젝션 선택: `.select::&lt;T&gt;()`
- 다음으로 필터링: `.cond(...)`
- 다음으로 제한: `.take(...)`
- 다음으로 페이지 매김: `.skip(...)`
- 다음으로 정렬: `.order_by(...)`
- 다음으로 관계 로드: `.includes(...)`
- 다음으로 관계 계산: `.count(...)`
- 다음으로 주 데이터베이스에서 읽기 강제: `.read_in_primary()`
- 다음으로 실행: `.execute(&client)`

## 메서드 설명

- `.select::&lt;T&gt;()`: 모델의 기본 프로젝션을 사용자 지정 프로젝션으로 바꿉니다.
- `.cond(...)`: 쿼리에 필터 조건을 추가합니다.
- `.take(...)`: 반환되는 레코드 수를 제한합니다.
- `.skip(...)`: 결과를 반환하기 전에 지정된 수의 레코드를 건너뜁니다.
- `.order_by(...)`: 쿼리의 정렬 순서를 정의합니다.
- `.includes(...)`: 주요 레코드와 함께 관계를 로드합니다.
- `.count(...)`: 관계 카운터를 계산하고 `posts_count`와 같은 필드를 채웁니다.
- `.read_in_primary()`: 복제본을 사용하지 않고 주 데이터베이스에서 읽기를 강제합니다.
- `.execute(&client)`: 데이터베이스에서 쿼리를 실행합니다.

## 반환

`select::&lt;T&gt;()`가 없으면 반환 값은 다음과 같습니다:

```rust
DinocoResult<Vec<M>>
```

`select::&lt;T&gt;()`가 있으면 반환 값은 다음과 같이 변경됩니다:

```rust
DinocoResult<Vec<T>>
```

## 기본 예시

```rust
let users = dinoco::find_many::<User>()
    .execute(&client)
    .await?;
```

## 필터 예시

```rust
let users = dinoco::find_many::<User>()
    .cond(|w| w.email.eq("ana@acme.com"))
    .execute(&client)
    .await?;
```

## 페이지 매김 및 정렬 예시

```rust
let users = dinoco::find_many::<User>()
    .order_by(|w| w.name.asc())
    .skip(20)
    .take(10)
    .execute(&client)
    .await?;
```

## 사용자 지정 선택 예시

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserListItem {
    id: i64,
    name: String,
}

let users = dinoco::find_many::<User>()
    .select::<UserListItem>()
    .execute(&client)
    .await?;
```

## 간단한 포함 예시

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPosts {
    id: i64,
    name: String,
    posts: Vec<Post>,
}

let users = dinoco::find_many::<User>()
    .select::<UserWithPosts>()
    .includes(|i| i.posts())
    .execute(&client)
    .await?;
```

## 필터링된 포함 예시

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPublishedPosts {
    id: i64,
    name: String,
    posts: Vec<Post>,
}

let users = dinoco::find_many::<User>()
    .select::<UserWithPublishedPosts>()
    .includes(|i| i.posts().cond(|w| w.published.eq(true)))
    .execute(&client)
    .await?;
```

## 중첩된 포함 예시

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(Comment)]
struct CommentListItem {
    id: i64,
    text: String,
}

#[derive(Debug, Clone, dinoco::Extend)]
#[extend(Post)]
struct PostWithComments {
    id: i64,
    title: String,
    comments: Vec<CommentListItem>,
    comments_count: usize,
}

#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPosts {
    id: i64,
    name: String,
    posts: Vec<PostWithComments>,
}

let users = dinoco::find_many::<User>()
    .select::<UserWithPosts>()
    .includes(|i| {
        i.posts()
            .includes(|post| post.comments().take(3))
            .count(|post| post.comments())
    })
    .execute(&client)
    .await?;
```

## 관계 카운트 예시

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPostsCount {
    id: i64,
    name: String,
    posts_count: usize,
}

let users = dinoco::find_many::<User>()
    .select::<UserWithPostsCount>()
    .count(|i| i.posts())
    .execute(&client)
    .await?;
```

## 주 데이터베이스에서 읽기 예시

```rust
let users = dinoco::find_many::<User>()
    .read_in_primary()
    .take(5)
    .execute(&client)
    .await?;
```

## 다음 단계

- [**`find_first::&lt;M&gt;()`**](/v0.0.1/orm/find-first): 최대 하나의 레코드를 가져오는 버전입니다.
- [**`count::&lt;M&gt;()`**](/v0.0.1/orm/count): 필터가 적용된 레코드 수입니다.
