dinoco_docs/src/content/v0.0.2/ko-kr/orm/find-many.mdx
export const title = 'find_many';

# find_many

레코드 목록을 가져오는 데 사용됩니다.

---

## 수행할 수 있는 작업

- `.select::\<T\>()`: 모델의 기본 프로젝션을 사용자 지정 프로젝션으로 바꿉니다.
- `.cond(...)`: 쿼리에 필터 조건을 추가합니다.
- `.take(...)`: 반환되는 레코드 수를 제한합니다.
- `.skip(...)`: 결과를 반환하기 전에 지정된 수의 레코드를 건너뜠니다.
- `.order_by(...)`: 쿼리의 정렬 순서를 정의합니다.
- `.includes(...)`: 주요 레코드와 함께 관계를 로드합니다.
- `.count(...)`: 관계 카운터를 계산하고 `posts_count`와 같은 필드를 채웁니다.
- `.cache(...)`: 제공된 키를 사용하여 Redis에서 먼저 쿼리합니다. 캐시 미스 시 쿼리를 실행하고 결과를 저장한 후 반환합니다. 캐시 히트 시 쿼리 로거는 `CACHE HIT key=...`를 기록합니다.
- `.cache_with_expiration(...)`: 표준 캐시와 동일하게 동작하지만, TTL(초)과 함께 저장합니다.
- `.read_in_primary()`: 복제본을 사용하지 않고 주 데이터베이스에서 읽기를 강제합니다.
- `.execute(&client)`: 데이터베이스에서 쿼리를 실행합니다.

## 반환

`select::\<T\>()`가 없으면 반환 값은 다음과 같습니다:

```rust
DinocoResult<Vec<M>>
```

`select::\<T\>()`가 있으면 반환 값은 다음과 같이 변경됩니다:

```rust
DinocoResult<Vec<T>>
```

## 기본 예시

```rust
let users = dinoco::find_many::<User>()
    .execute(&client)
    .await?;
```

## 필터 예시

```rust
let users = dinoco::find_many::<User>()
    .cond(|w| w.email.eq("ana@acme.com"))
    .execute(&client)
    .await?;
```

## 페이지네이션 및 정렬 예시

```rust
let users = dinoco::find_many::<User>()
    .order_by(|w| w.name.asc())
    .skip(20)
    .take(10)
    .execute(&client)
    .await?;
```

## 사용자 지정 선택 예시

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserListItem {
    id: i64,
    name: String,
}

let users = dinoco::find_many::<User>()
    .select::<UserListItem>()
    .execute(&client)
    .await?;
```

## 간단한 포함 예시

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPosts {
    id: i64,
    name: String,
    posts: Vec<Post>,
}

let users = dinoco::find_many::<User>()
    .select::<UserWithPosts>()
    .includes(|i| i.posts())
    .execute(&client)
    .await?;
```

## 필터링된 포함 예시

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPublishedPosts {
    id: i64,
    name: String,
    posts: Vec<Post>,
}

let users = dinoco::find_many::<User>()
    .select::<UserWithPublishedPosts>()
    .includes(|i| i.posts().cond(|w| w.published.eq(true)))
    .execute(&client)
    .await?;
```

## 중첩된 포함 예시

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(Comment)]
struct CommentListItem {
    id: i64,
    text: String,
}

#[derive(Debug, Clone, dinoco::Extend)]
#[extend(Post)]
struct PostWithComments {
    id: i64,
    title: String,
    comments: Vec<CommentListItem>,
    comments_count: usize,
}

#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPosts {
    id: i64,
    name: String,
    posts: Vec<PostWithComments>,
}

let users = dinoco::find_many::<User>()
    .select::<UserWithPosts>()
    .includes(|i| {
        i.posts()
            .includes(|post| post.comments().take(3))
            .count(|post| post.comments())
    })
    .execute(&client)
    .await?;
```

## 관계 카운트 예시

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPostsCount {
    id: i64,
    name: String,
    posts_count: usize,
}

let users = dinoco::find_many::<User>()
    .select::<UserWithPostsCount>()
    .count(|i| i.posts())
    .execute(&client)
    .await?;
```

## 주 데이터베이스에서 읽기 예시

```rust
let users = dinoco::find_many::<User>()
    .read_in_primary()
    .take(5)
    .execute(&client)
    .await?;
```

## 워커 예시

```rust
use database::*;

let _worker = workers()
    .on::<Vec<User>, _, _>("user.batch-read", |job| async move {
        println!("{}명의 사용자로 배치가 읽혔습니다.", job.data.len());
        job.success();
    })
    .run()
    .await?;

let users = dinoco::find_many::<User>()
    .order_by(|w| w.name.asc())
    .take(20)
    .enqueue("user.batch-read")
    .execute(&client)
    .await?;
```

워커에 대한 자세한 내용은 [**`queues`**](/v0.0.2/orm/queues)를 참조하세요.

## 캐시 예시

이 메서드는 스키마의 `config {}`에 `redis`가 있을 때만 생성됩니다.

```rust
use database::*;

let users = dinoco::find_many::<User>()
    .order_by(|w| w.name.asc())
    .cache("users:list")
    .execute(&client)
    .await?;
```

## 캐시 및 만료 예시

```rust
use database::*;

let users = dinoco::find_many::<User>()
    .take(20)
    .cache_with_expiration("users:top-20", 60)
    .execute(&client)
    .await?;
```

## 다음 단계

- [**`find_first::\<M\>()`**](/v0.0.2/orm/find-first): 최대 하나의 레코드를 가져오는 버전입니다.
- [**`count::\<M\>()`**](/v0.0.2/orm/count): 필터가 적용된 레코드 수입니다.
